# distance-field

./: .gitmodules  CMakeLists.txt  README.md  bitmap.hpp  distance_field.cpp  distance_field.hpp  main.cpp
include/: distance_field.hpp
src/: bitmap.hpp  distance_field.cpp  main.cpp
test/data/: img.xcf
test/src/: bitmap.hpp  main.cpp  test_bitmap.cpp  test_field_error.cpp
